# Work-Track-3D

./: WORK_TRACK_3D.md
.github/workflows/: build_release.yml  codeql.yml  codeql_cpp.yml
cMake/: FindKDL.cmake  FindMatplotlib.cmake  FreeCadMacros.cmake
src/: FCConfig.h  FCGlobal.h
src/App/: Annotation.cpp  Annotation.h  Application.cpp  Application.h  ApplicationPy.cpp  ColorModel.cpp  ColorModel.h  ComplexGeoData.cpp  ComplexGeoData.h  ComplexGeoDataPyImp.cpp  Document.cpp  Document.h  DocumentObject.cpp  DocumentObject.h  DocumentObjectExtension.cpp  DocumentObjectExtension.h  DocumentObjectExtensionPyImp.cpp  DocumentObjectFileIncluded.cpp  DocumentObjectFileIncluded.h  DocumentObjectGroup.cpp  DocumentObjectGroup.h  DocumentObjectGroupPyImp.cpp  DocumentObjectPyImp.cpp  DocumentObserver.cpp  DocumentObserver.h  DocumentObserverPython.cpp  DocumentObserverPython.h  DocumentPyImp.cpp  DynamicProperty.cpp  DynamicProperty.h  ExtensionContainerPyImp.cpp  ExtensionPyImp.cpp  FeaturePython.cpp  FeaturePython.h  FeatureTest.cpp  FeatureTest.h  FreeCADInit.py  FreeCADTest.py  GeoFeature.cpp  GeoFeature.h  (+37 more)
src/Base/: Axis.cpp  Axis.h  AxisPyImp.cpp  Base64.cpp  Base64.h  BaseClass.cpp  BaseClass.h  BaseClassPyImp.cpp  BoundBox.h  BoundBoxPyImp.cpp  Console.cpp  Console.h  ConsoleObserver.cpp  ConsoleObserver.h  Exception.cpp  Exception.h  ExceptionFactory.cpp  ExceptionFactory.h  Factory.cpp  Factory.h  FileInfo.cpp  FileInfo.h  (+67 more)
src/Mod/FDM/: CMakeLists.txt  Commands.py  FORMAT_BRIDGE.md  Init.py  InitGui.py  README.md  fdm_dialog.py  fdm_slicer.py  format_bridge.py
(+350 files in other folders)
